# wsjcpp-parse-conf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  example.conf  wsjcpp.yml
src/: main.cpp
src.wsjcpp/: CMakeLists.txt
src.wsjcpp/wsjcpp_core/: wsjcpp.hold.yml
unit-tests.wsjcpp/: CMakeLists.txt
